[package]
name = "vivace"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
regex = "1.8.4"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
json = "0.12.4"
error-chain = "0.12.4"
ytb-downloader = "0.1.0" 
env_logger = "0.10.0"
log = "0.4.19"
clap = { version = "4.3.10", features = ["derive"] }

